# Data-Contract-Enforcer

./: .gitignore  DEMO_SCRIPT.md  DOMAIN_NOTES.md  README.md  VIOLATION_LOG_SCHEMA.md  finalreport.md  main.py  presentation_script.md  pyproject.toml  requirements.txt
contract_registry/: subscriptions.yaml
contracts/: __init__.py  ai_extensions.py  attributor.py  generator.py  report_generator.py  runner.py  schema_analyzer.py
dashboard/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
enforcer_report/: report.md  report_2026-03-31.md  report_2026-04-02.md  report_2026-04-03.md  report_2026-04-05.md  report_data.json
generated_contracts/: events.yaml  extractions_dbt.yml  langsmith_traces_dbt.yml  lineage_snapshots_dbt.yml  runs_dbt.yml  verdicts_dbt.yml  week1_intent_records_dbt.yml  week2_verdicts_dbt.yml  week3_extractions_dbt.yml  week4_lineage.yaml  week4_lineage_snapshots_dbt.yml  week5_events.yaml  week5_events_dbt.yml
outputs/traces/: runs.jsonl
schema_snapshots/: ai_metrics_history.jsonl  baselines.json  embedding_baselines.npz  generator_baselines.json
scripts/: generate_sample_data.py  prepend_comment.py
validation_reports/: ai_metrics.json  langsmith-traces_20260402_183618.json  langsmith-traces_20260402_183708.json  langsmith-traces_20260402_184033.json  langsmith-traces_20260402_184117.json  langsmith-traces_20260402_184814.json  langsmith-traces_20260402_193041.json  langsmith-traces_20260402_193135.json  langsmith-traces_20260402_193205.json  langsmith-traces_20260403_180144.json  langsmith-traces_20260405_191553.json  (+105 more)
(+73 files in other folders)
